Update index.html with dark theme styles and improved navigation aesthetics

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #121212;
+            color: #e0e0e0;
         }
 
         header {
-            background: #35424a;
+            background: #1f1f1f;
             color: #ffffff;
             padding: 20px 0;
             text-align: center;
+            border-bottom: 1px solid #333;
+            border-radius: 0 0 10px 10px;
         }
 
         header h1 {
@@ -30,20 +33,27 @@
         }
 
         nav a {
-            color: #ffffff;
+            color: #bb86fc;
             text-decoration: none;
             margin: 0 15px;
             font-weight: bold;
+            border-radius: 5px;
+            padding: 5px 10px;
         }
 
         nav a:hover {
             text-decoration: underline;
+            background-color: #333;
         }
 
         .container {
             width: 80%;
             margin: auto;
             overflow: hidden;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #1f1f1f;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         article {
