--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Blog</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #121212;
-            color: #e0e0e0;
+            background-color: #181818;
+            color: #f5f5f5;
         }
 
         header {
-            background: #1f1f1f;
+            background: #282828;
             color: #ffffff;
             padding: 20px 0;
             text-align: center;
-            border-bottom: 1px solid #333;
-            border-radius: 0 0 10px 10px;
+            border-bottom: 1px solid #444;
+            border-radius: 0 0 15px 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         header h1 {
             margin: 0;
             font-size: 2.5em;
+            font-weight: 700;
         }
 
         nav {
@@ -33,27 +36,26 @@
         }
 
         nav a {
-            color: #bb86fc;
+            color: #61dafb;
             text-decoration: none;
             margin: 0 15px;
-            font-weight: bold;
+            font-weight: 700;
             border-radius: 5px;
-            padding: 5px 10px;
+            padding: 10px 15px;
+            transition: background-color 0.3s ease;
         }
 
         nav a:hover {
-            text-decoration: underline;
             background-color: #333;
         }
 
         .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
             padding: 20px;
-            border-radius: 10px;
-            background-color: #1f1f1f;
+            border-radius: 15px;
+            background-color: #282828;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin: 20px auto;
+            max-width: 800px;
         }
 
         article {
@@ -81,25 +83,23 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h1>My Personal Blog</h1>
-        </div>
+        <h1>My Personal Blog</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
-        <h1>Welcome to My Personal Blog</h1>
-        <p>Here you'll find my thoughts, experiences, and stories.</p>
-        <section id="recent-posts">
-            <h2>Recent Posts</h2>
-            <!-- Blog posts will be dynamically loaded here -->
-        </section>
-    </main>
+    <div class="container">
+        <main>
+            <h1>Welcome to My Personal Blog</h1>
+            <p>Here you'll find my thoughts, experiences, and stories.</p>
+            <section id="recent-posts">
+                <h2>Recent Posts</h2>
+                <!-- Blog posts will be dynamically loaded here -->
+            </section>
+        </main>
+    </div>
     <footer>
         <div class="footer-content">
             <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
