--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
     <div class="footer-content">
       <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
       <ul class="social-media">
-        <li><a href="https://x.com/UnexpectedRoute" target="_blank">Twitter</a></li>
+        <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li>
+        <li><a href="https://facebook.com/yourprofile" target="_blank">Facebook</a></li>
+        <li><a href="https://instagram.com/yourprofile" target="_blank">Instagram</a></li>
       </ul>
     </div>
     <div class="footer-links">
