--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,7 @@
       --input-border: #333;
       --input-focus: #bb86fc;
     }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
       background: var(--primary-bg);
@@ -34,7 +28,6 @@
       min-height: 100vh;
       padding-bottom: 80px;
     }
-
     header {
       background: var(--header-bg);
       padding: 20px;
@@ -44,18 +37,8 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       margin-bottom: 20px;
     }
-
-    header h1 {
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
+    header h1 { font-size: 2.5rem; letter-spacing: 2px; }
+    .container { max-width: 600px; margin: 0 auto; padding: 20px; }
     main {
       background: var(--secondary-bg);
       padding: 30px;
@@ -63,18 +46,8 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
       margin-bottom: 40px;
     }
-
-    main h1 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
-
-    main p {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
+    main h1 { text-align: center; font-size: 2rem; margin-bottom: 15px; }
+    main p { text-align: center; margin-bottom: 30px; }
     form {
       display: flex;
       flex-direction: column;
@@ -86,15 +59,12 @@
       max-width: 450px;
       margin: 0 auto;
     }
-
     label {
       font-weight: 500;
       margin-bottom: 5px;
       color: var(--accent-color);
     }
-
-    input,
-    textarea {
+    input, textarea {
       background: var(--input-bg);
       color: var(--text-color);
       border: 1.5px solid var(--input-border);
@@ -105,18 +75,11 @@
       font-family: 'Poppins', sans-serif;
       resize: none;
     }
-
-    input:focus,
-    textarea:focus {
+    input:focus, textarea:focus {
       border-color: var(--input-focus);
       outline: none;
     }
-
-    textarea {
-      min-height: 100px;
-      max-height: 250px;
-    }
-
+    textarea { min-height: 100px; max-height: 250px; }
     button[type="submit"] {
       background: var(--accent-color);
       color: var(--text-color);
@@ -130,13 +93,17 @@
       margin-top: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
-
     button[type="submit"]:hover {
       background: var(--text-color);
       color: var(--accent-color);
       transform: translateY(-2px);
     }
-
+    .thank-you {
+      text-align: center;
+      color: var(--accent-color);
+      font-size: 1.2rem;
+      margin-top: 20px;
+    }
     footer {
       background: var(--footer-bg);
       position: fixed;
@@ -147,12 +114,7 @@
       padding: 15px 0;
       border-top: 2px solid #333;
     }
-
-    footer p {
-      margin: 5px 0;
-      font-size: 0.9rem;
-      color: var(--text-color);
-    }
+    footer p { margin: 5px 0; font-size: 0.9rem; color: var(--text-color); }
   </style>
 </head>
 <body>
@@ -163,7 +125,7 @@
     <main>
       <h1>Contact Us</h1>
       <p>If you have any questions or comments, feel free to reach out!</p>
-      <form action="#" method="post">
+      <form id="contact-form" action="https://formspree.io/f/movezwdz" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
@@ -175,10 +137,38 @@
 
         <button type="submit">Send Message</button>
       </form>
+      <div class="thank-you" id="thank-you" style="display:none;">
+        Thank you for your message! We'll get back to you soon.
+      </div>
     </main>
   </div>
   <footer>
     <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
   </footer>
+  <script>
+    // Optional: Show thank you message without leaving the page
+    document.getElementById('contact-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const form = e.target;
+      fetch(form.action, {
+        method: form.method,
+        body: new FormData(form),
+        headers: {
+          'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          form.style.display = 'none';
+          document.getElementById('thank-you').style.display = 'block';
+        } else {
+          response.json().then(data => {
+            alert(data.error || 'There was a problem submitting your form.');
+          });
+        }
+      }).catch(error => {
+        alert('There was a problem submitting your form.');
+      });
+    });
+  </script>
 </body>
 </html>
