--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Personal Blog</title>
+  <title>Test Site</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Modern font for a clean look -->
@@ -194,8 +194,8 @@
   
   <div class="container">
     <main>
-      <h1>Welcome to My Personal Blog</h1>
-      <p>Here you'll find my thoughts, experiences, and stories.</p>
+      <h1>Welcome to My Website</h1>
+      <p>Here you'll find some stuff later</p>
       <section id="recent-posts">
         <h2>Recent Posts</h2>
         <!-- Blog posts will be dynamically loaded here -->
@@ -205,11 +205,9 @@
   
   <footer>
     <div class="footer-content">
-      <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
+      <p>&copy; 2025 SigmaBlog. All rights reserved.</p>
       <ul class="social-media">
-        <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li>
-        <li><a href="https://facebook.com/yourprofile" target="_blank">Facebook</a></li>
-        <li><a href="https://instagram.com/yourprofile" target="_blank">Instagram</a></li>
+        <li><a href="https://x.com/UnexpectedRoute" target="_blank">Twitter</a></li>
       </ul>
     </div>
     <div class="footer-links">
