Update image source for Microsoft Download Page in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h3>Visit the Microsoft Download Page</h3>
             <p>Go to <a href="https://www.microsoft.com/software-download/windows10" target="_blank">https://www.microsoft.com/software-download/windows10</a></p>
             <div class="screenshot">
-              <img src="https://via.placeholder.com/800x450?text=Microsoft+Download+Page" alt="Microsoft Download Page" class="expandable-img">
+              <img src="images/microsoft-download-page.jpg" alt="Microsoft Windows 10 Download Page" class="expandable-img">
               <span class="zoom-icon"><i class="fas fa-search-plus"></i></span>
             </div>
           </div>
