Revamp website structure and design; update header, footer, and about page for a modern look and improved user experience

--- a/header.html
+++ b/header.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Blog</title>
-    <link rel="stylesheet" href="../assets/css/styles.css">
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <h1>My Personal Blog</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="../pages/index.html">Home</a></li>
-                <li><a href="../pages/about.html">About</a></li>
-                <li><a href="../pages/contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-</body>
-</html>
+<header class="hero">
+    <nav>
+      <div class="logo">
+        <img src="https://img.icons8.com/color/48/windows-11.png" alt="Logo" />
+        <span>WinInstall Pro</span>
+      </div>
+      <ul>
+        <li><a href="index.html">Guide</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="post.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
