--- a/about.html
+++ b/about.html
@@ -1,136 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Personal Blog</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background: #35424a;
-            color: #ffffff;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        nav {
-            margin: 20px 0;
-        }
-
-        nav a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-
-        main {
-            background: #ffffff;
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            background: #35424a;
-            color: #ffffff;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        footer p {
-            margin: 0;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="logo">
-            <h1>My Personal Blog</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>About | WinInstall Pro</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+  </head>
+  <body>
+    <div id="header-include"></div>
     <main>
-        <h1>About This Blog</h1>
-        <p>Welcome to my personal blog! Here, I share my thoughts, experiences, and insights on various topics that interest me. My goal is to connect with readers and create a community where we can learn from each other.</p>
-        <p>As an avid writer and passionate learner, I believe in the power of sharing knowledge and stories. I hope you find my posts engaging and thought-provoking.</p>
-        <p>Thank you for visiting, and I look forward to your feedback!</p>
+      <section class="section">
+        <h2>About WinInstall Pro</h2>
+        <div class="about-content">
+          <img src="https://img.icons8.com/color/96/windows-11.png" alt="Windows" style="float:right;max-width:120px;margin-left:2rem;">
+          <p>
+            <b>WinInstall Pro</b> is a free, student-friendly resource for anyone who wants to install Windows using a USB drive and Rufus. Our mission is to make the process <b>simple, beautiful, and accessible</b> for everyone, from beginners to techies.
+          </p>
+          <p>
+            This site is open source and maintained by students and volunteers. We believe in empowering people with clear, modern guides and stunning visuals.
+          </p>
+          <p>
+            <b>Why trust us?</b> Our guides are based on real-world experience, tested on dozens of devices, and updated regularly.
+          </p>
+        </div>
+      </section>
     </main>
-    
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
-            <ul class="social-media">
-                <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li>
-                <li><a href="https://facebook.com/yourprofile" target="_blank">Facebook</a></li>
-                <li><a href="https://instagram.com/yourprofile" target="_blank">Instagram</a></li>
-            </ul>
-        </div>
-        <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
-    </footer>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Smooth scrolling for navigation links
-            const navLinks = document.querySelectorAll('a[href^="#"]');
-            navLinks.forEach(link => {
-                link.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    const targetId = this.getAttribute('href');
-                    const targetElement = document.querySelector(targetId);
-                    targetElement.scrollIntoView({ behavior: 'smooth' });
-                });
-            });
-
-            // Form validation for contact form
-            const contactForm = document.getElementById('contact-form');
-            if (contactForm) {
-                contactForm.addEventListener('submit', function(e) {
-                    const name = document.getElementById('name').value;
-                    const email = document.getElementById('email').value;
-                    if (!name || !email) {
-                        e.preventDefault();
-                        alert('Please fill in all fields.');
-                    }
-                });
-            }
-        });
-    </script>
-</body>
+    <div id="footer-include"></div>
+    <script src="animations.js"></script>
+    <script src="scripts.js"></script>
+  </body>
 </html>
