--- a/contact.html
+++ b/contact.html
@@ -1,174 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --primary-bg: #121212;
-      --secondary-bg: #1e1e1e;
-      --accent-color: #bb86fc;
-      --text-color: #e0e0e0;
-      --card-bg: #2a2a2a;
-      --header-bg: #1f1f1f;
-      --footer-bg: #181818;
-      --input-bg: #232323;
-      --input-border: #333;
-      --input-focus: #bb86fc;
-    }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: var(--primary-bg);
-      color: var(--text-color);
-      min-height: 100vh;
-      padding-bottom: 80px;
-    }
-    header {
-      background: var(--header-bg);
-      padding: 20px;
-      text-align: center;
-      border-bottom: 2px solid #333;
-      border-radius: 0 0 20px 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      margin-bottom: 20px;
-    }
-    header h1 { font-size: 2.5rem; letter-spacing: 2px; }
-    .container { max-width: 600px; margin: 0 auto; padding: 20px; }
-    main {
-      background: var(--secondary-bg);
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      margin-bottom: 40px;
-    }
-    main h1 { text-align: center; font-size: 2rem; margin-bottom: 15px; }
-    main p { text-align: center; margin-bottom: 30px; }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      background: var(--card-bg);
-      padding: 25px 20px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      max-width: 450px;
-      margin: 0 auto;
-    }
-    label {
-      font-weight: 500;
-      margin-bottom: 5px;
-      color: var(--accent-color);
-    }
-    input, textarea {
-      background: var(--input-bg);
-      color: var(--text-color);
-      border: 1.5px solid var(--input-border);
-      border-radius: 8px;
-      padding: 10px 12px;
-      font-size: 1rem;
-      transition: border 0.3s;
-      font-family: 'Poppins', sans-serif;
-      resize: none;
-    }
-    input:focus, textarea:focus {
-      border-color: var(--input-focus);
-      outline: none;
-    }
-    textarea { min-height: 100px; max-height: 250px; }
-    button[type="submit"] {
-      background: var(--accent-color);
-      color: var(--text-color);
-      border: none;
-      padding: 12px 0;
-      border-radius: 30px;
-      font-size: 1.1rem;
-      font-weight: 700;
-      cursor: pointer;
-      transition: background 0.3s, color 0.3s, transform 0.2s;
-      margin-top: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    }
-    button[type="submit"]:hover {
-      background: var(--text-color);
-      color: var(--accent-color);
-      transform: translateY(-2px);
-    }
-    .thank-you {
-      text-align: center;
-      color: var(--accent-color);
-      font-size: 1.2rem;
-      margin-top: 20px;
-    }
-    footer {
-      background: var(--footer-bg);
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      text-align: center;
-      padding: 15px 0;
-      border-top: 2px solid #333;
-    }
-    footer p { margin: 5px 0; font-size: 0.9rem; color: var(--text-color); }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Contact Us</h1>
-  </header>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Contact | WinInstall Pro</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+  </head>
+  <body>
+    <div id="header-include"></div>
     <main>
-      <h1>Contact Us</h1>
-      <p>If you have any questions or comments, feel free to reach out!</p>
-      <form id="contact-form" action="https://formspree.io/f/movezwdz" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required></textarea>
-
-        <button type="submit">Send Message</button>
-      </form>
-      <div class="thank-you" id="thank-you" style="display:none;">
-        Thank you for your message! We'll get back to you soon.
-      </div>
+      <section class="section">
+        <h2>Contact</h2>
+        <div class="contact-content">
+          <p>
+            Have questions, suggestions, or want to contribute? Reach out!
+          </p>
+          <ul>
+            <li>Email: <a href="mailto:hello@wininstallpro.com">hello@wininstallpro.com</a></li>
+            <li>GitHub: <a href="https://github.com/yourusername/yourrepo" target="_blank">Project Repository</a></li>
+            <li>Twitter: <a href="https://twitter.com/" target="_blank">@WinInstallPro</a></li>
+          </ul>
+          <p>
+            We love feedback and are always looking to improve.
+          </p>
+        </div>
+      </section>
     </main>
-  </div>
-  <footer>
-    <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
-  </footer>
-  <script>
-    // Optional: Show thank you message without leaving the page
-    document.getElementById('contact-form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const form = e.target;
-      fetch(form.action, {
-        method: form.method,
-        body: new FormData(form),
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          form.style.display = 'none';
-          document.getElementById('thank-you').style.display = 'block';
-        } else {
-          response.json().then(data => {
-            alert(data.error || 'There was a problem submitting your form.');
-          });
-        }
-      }).catch(error => {
-        alert('There was a problem submitting your form.');
-      });
-    });
-  </script>
-</body>
+    <div id="footer-include"></div>
+    <script src="animations.js"></script>
+    <script src="scripts.js"></script>
+  </body>
 </html>
