--- a/footer.html
+++ b/footer.html
@@ -1,15 +1,7 @@
 <footer>
-    <div class="footer-content">
-        <p>&copy; 2023 Your Blog Name. All rights reserved.</p>
-        <ul class="social-media">
-            <li><a href="https://twitter.com/yourprofile" target="_blank">Twitter</a></li>
-            <li><a href="https://facebook.com/yourprofile" target="_blank">Facebook</a></li>
-            <li><a href="https://instagram.com/yourprofile" target="_blank">Instagram</a></li>
-        </ul>
-    </div>
-    <div class="footer-links">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </div>
-</footer>
+    <p>
+      &copy; 2025 WinInstall Pro. Made with 💙 for students and techies.<br />
+      <a href="https://github.com/Quinny450/Quinny450.github.io" target="_blank" rel="noopener">View on GitHub</a>
+    </p>
+  </footer>
+  
