--- a/index.html
+++ b/index.html
@@ -2,49 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Install Windows with USB & Rufus | Ultimate Guide</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      /* Insert the CSS from the previous answer here, or link to styles.css */
-      /* ... (use the styles.css from above) ... */
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <header class="hero">
-      <nav>
-        <div class="logo">
-          <img src="https://img.icons8.com/color/48/windows-11.png" alt="Logo" />
-          <span>WinInstall Pro</span>
-        </div>
-        <ul>
-          <li><a href="#requirements">Requirements</a></li>
-          <li><a href="#steps">Step-by-Step</a></li>
-          <li><a href="#faq">FAQ</a></li>
-        </ul>
-      </nav>
-      <div class="hero-content">
-        <h1>
-          <span class="gradient-text">Install Windows</span>
-          <br />
-          <span>with USB & Rufus</span>
-        </h1>
-        <p>
-          The ultimate, visually stunning guide to creating a bootable USB and
-          installing Windows 11 (or any version) with ease.
-        </p>
-        <a href="#steps" class="cta-btn">Get Started</a>
-      </div>
-      <div class="hero-bg"></div>
-    </header>
-
+    <div id="header-include"></div>
+    <div class="hero-content">
+      <h1>
+        <span class="gradient-text">Install Windows</span><br />
+        <span>with USB & Rufus</span>
+      </h1>
+      <p>
+        The ultimate, visually stunning guide to creating a bootable USB and installing Windows 11 (or any version) with ease.
+      </p>
+      <a href="#steps" class="cta-btn">Get Started</a>
+    </div>
+    <div class="hero-bg"></div>
     <main>
       <section id="requirements" class="section">
         <h2>What You’ll Need</h2>
@@ -59,11 +34,7 @@
             <h3>Windows ISO</h3>
             <p>
               Download from
-              <a
-                href="https://www.microsoft.com/software-download/windows11"
-                target="_blank"
-                >Microsoft</a
-              >.
+              <a href="https://www.microsoft.com/software-download/windows11" target="_blank">Microsoft</a>.
             </p>
           </div>
           <div class="requirement-card">
@@ -76,7 +47,6 @@
           </div>
         </div>
       </section>
-
       <section id="steps" class="section">
         <h2>Step-by-Step Guide</h2>
         <ol class="steps-list">
@@ -87,11 +57,8 @@
                 <h4>Download the Windows ISO</h4>
                 <p>
                   Go to the
-                  <a
-                    href="https://www.microsoft.com/software-download/windows11"
-                    target="_blank"
-                    >Microsoft Windows Download page</a
-                  >. Select your Windows version and click "Download". Save the ISO file to your computer.
+                  <a href="https://www.microsoft.com/software-download/windows11" target="_blank">Microsoft Windows Download page</a>.
+                  Select your Windows version and click "Download". Save the ISO file to your computer.
                 </p>
                 <p>
                   <b>Tip:</b> For Windows 10 or 8, use their respective download pages.
@@ -127,21 +94,11 @@
               <div>
                 <h4>Configure Rufus</h4>
                 <ul>
-                  <li>
-                    <b>Device:</b> Select your USB drive from the dropdown.
-                  </li>
-                  <li>
-                    <b>Boot selection:</b> Click "SELECT" and choose your Windows ISO file.
-                  </li>
-                  <li>
-                    <b>Partition scheme:</b> Choose <b>GPT</b> for modern UEFI systems, or <b>MBR</b> for older BIOS systems.
-                  </li>
-                  <li>
-                    <b>File system:</b> Use <b>NTFS</b> (for files over 4GB) or <b>FAT32</b> (for maximum compatibility).
-                  </li>
-                  <li>
-                    <b>Volume label:</b> You can name your USB (e.g., "WIN11USB").
-                  </li>
+                  <li><b>Device:</b> Select your USB drive from the dropdown.</li>
+                  <li><b>Boot selection:</b> Click "SELECT" and choose your Windows ISO file.</li>
+                  <li><b>Partition scheme:</b> Choose <b>GPT</b> for modern UEFI systems, or <b>MBR</b> for older BIOS systems.</li>
+                  <li><b>File system:</b> Use <b>NTFS</b> (for files over 4GB) or <b>FAT32</b> (for maximum compatibility).</li>
+                  <li><b>Volume label:</b> You can name your USB (e.g., "WIN11USB").</li>
                 </ul>
                 <p>
                   <b>Advanced:</b> Leave other settings at default unless you know what you’re doing.
@@ -169,18 +126,10 @@
               <div>
                 <h4>Boot from the USB & Install Windows</h4>
                 <ul>
-                  <li>
-                    Insert the USB into the target PC.
-                  </li>
-                  <li>
-                    Restart the PC and enter the boot menu (usually <b>F12</b>, <b>F2</b>, <b>DEL</b>, or <b>ESC</b> at startup).
-                  </li>
-                  <li>
-                    Select your USB drive as the boot device.
-                  </li>
-                  <li>
-                    The Windows installer will start. Follow the on-screen instructions to install Windows.
-                  </li>
+                  <li>Insert the USB into the target PC.</li>
+                  <li>Restart the PC and enter the boot menu (usually <b>F12</b>, <b>F2</b>, <b>DEL</b>, or <b>ESC</b> at startup).</li>
+                  <li>Select your USB drive as the boot device.</li>
+                  <li>The Windows installer will start. Follow the on-screen instructions to install Windows.</li>
                 </ul>
                 <p>
                   <b>Tip:</b> If you don’t see the USB, check your BIOS/UEFI settings and enable booting from USB.
@@ -204,7 +153,6 @@
           </li>
         </ol>
       </section>
-
       <section id="faq" class="section">
         <h2>Frequently Asked Questions</h2>
         <div class="faq-list">
@@ -241,99 +189,10 @@
         </div>
       </section>
     </main>
-
-    <footer>
-      <p>
-        &copy; 2025 WinInstall Pro. Made with 💙 for students and techies.
-      </p>
-    </footer>
-
-    <!-- GSAP for advanced animations -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script>
-      // Animate hero text and background
-      window.addEventListener('DOMContentLoaded', () => {
-        gsap.from('.hero-content h1', {
-          y: 60,
-          opacity: 0,
-          duration: 1.2,
-          ease: 'power4.out',
-        });
-        gsap.from('.hero-content p', {
-          y: 40,
-          opacity: 0,
-          delay: 0.3,
-          duration: 1,
-          ease: 'power3.out',
-        });
-        gsap.from('.cta-btn', {
-          scale: 0.8,
-          opacity: 0,
-          delay: 0.6,
-          duration: 0.8,
-          ease: 'back.out(1.7)',
-        });
-
-        // Animate requirements cards
-        gsap.from('.requirement-card', {
-          y: 40,
-          opacity: 0,
-          stagger: 0.15,
-          delay: 0.8,
-          duration: 1,
-          ease: 'power3.out',
-        });
-
-        // Animate steps on scroll
-        gsap.utils.toArray('.step-card').forEach((card, i) => {
-          gsap.from(card, {
-            scrollTrigger: {
-              trigger: card,
-              start: 'top 80%',
-            },
-            x: i % 2 === 0 ? -80 : 80,
-            opacity: 0,
-            duration: 1,
-            ease: 'power3.out',
-          });
-        });
-
-        // Animate FAQ items
-        gsap.utils.toArray('.faq-item').forEach((item, i) => {
-          gsap.from(item, {
-            scrollTrigger: {
-              trigger: item,
-              start: 'top 90%',
-            },
-            y: 40,
-            opacity: 0,
-            duration: 0.8,
-            delay: i * 0.1,
-            ease: 'power2.out',
-          });
-        });
-
-        // Parallax hero background
-        document.addEventListener('mousemove', (e) => {
-          const x = (e.clientX / window.innerWidth - 0.5) * 40;
-          const y = (e.clientY / window.innerHeight - 0.5) * 40;
-          gsap.to('.hero-bg', {
-            x: x,
-            y: y,
-            duration: 1.2,
-            ease: 'power3.out',
-          });
-        });
-      });
-    </script>
+    <div id="footer-include"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="animations.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
