--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span>with USB & Rufus</span>
       </h1>
       <p>
-        The ultimate, visually stunning guide to creating a bootable USB and installing Windows 11 (or any version) with ease.
+        The ultimate guide to creating a bootable USB and installing Windows 11 (or any version) with ease.
       </p>
       <a href="#steps" class="cta-btn">Get Started</a>
     </div>
@@ -25,7 +25,7 @@
         <h2>What You’ll Need</h2>
         <div class="requirements-list">
           <div class="requirement-card">
-            <img src="https://img.icons8.com/fluency/48/usb.png" alt="USB Drive" />
+            <img src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/icons/usb.svg" alt="USB Drive" />
             <h3>USB Drive</h3>
             <p>At least 8GB, empty or backed up.</p>
           </div>
@@ -38,7 +38,7 @@
             </p>
           </div>
           <div class="requirement-card">
-            <img src="https://img.icons8.com/color/48/rufus.png" alt="Rufus" />
+            <img src="https://rufus.ie/pics/rufus-256.png" alt="Rufus" />
             <h3>Rufus</h3>
             <p>
               Get the latest version from
