Add README, restructure HTML files, and update SVG icons for improved clarity and design

--- a/about.html
+++ b/about.html
@@ -5,20 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About | WinInstall Pro</title>
   <link rel="stylesheet" href="styles/main.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header-include"></div>
+  <header>
+    <nav>
+      <a href="index.html" class="logo">
+        <img src="assets/windows.svg" alt="Windows Logo" />
+        WinInstall Pro
+      </a>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
-    <section class="section">
-      <h1>About WinInstall Pro</h1>
+    <section class="page">
+      <h1>About</h1>
       <p>
-        WinInstall Pro is a free, student-friendly resource for anyone who wants to install Windows using a USB drive and Rufus. Our mission is to make the process <b>simple, beautiful, and accessible</b> for everyone, from beginners to techies.
+        WinInstall Pro is a simple, student-friendly resource for anyone who wants to install Windows using a USB drive and Rufus. Our guides are clear, modern, and easy to follow.
       </p>
     </section>
   </main>
-  <div id="footer-include"></div>
-  <script src="scripts/animations.js"></script>
-  <script src="scripts/includes.js"></script>
+  <footer>
+    <p>&copy; 2025 WinInstall Pro</p>
+  </footer>
 </body>
 </html>
