--- a/contact.html
+++ b/contact.html
@@ -5,24 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact | WinInstall Pro</title>
   <link rel="stylesheet" href="styles/main.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
 </head>
 <body>
-  <div id="header-include"></div>
+  <header>
+    <nav>
+      <a href="index.html" class="logo">
+        <img src="assets/windows.svg" alt="Windows Logo" />
+        WinInstall Pro
+      </a>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
-    <section class="section">
+    <section class="page">
       <h1>Contact</h1>
       <p>
-        Have questions, suggestions, or want to contribute? Reach out!
+        Have questions or suggestions? Email us at <a href="mailto:hello@wininstallpro.com">hello@wininstallpro.com</a>.
       </p>
-      <ul>
-        <li>Email: <a href="mailto:hello@wininstallpro.com">hello@wininstallpro.com</a></li>
-        <li>GitHub: <a href="https://github.com/yourusername/yourrepo" target="_blank">Project Repository</a></li>
-      </ul>
     </section>
   </main>
-  <div id="footer-include"></div>
-  <script src="scripts/animations.js"></script>
-  <script src="scripts/includes.js"></script>
+  <footer>
+    <p>&copy; 2025 WinInstall Pro</p>
+  </footer>
 </body>
 </html>
