Refactor README and HTML files for clarity; update styles for a minimalist design

--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
     <section class="page">
       <h1>About</h1>
       <p>
-        WinInstall Pro is a simple, student-friendly resource for anyone who wants to install Windows using a USB drive and Rufus. Our guides are clear, modern, and easy to follow.
+        WinInstall Pro is a minimalist blog for Windows installation guides.  
+        Simple, clear, and distraction-free.
       </p>
     </section>
   </main>
