--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <section class="page">
       <h1>Contact</h1>
       <p>
-        Have questions or suggestions? Email us at <a href="mailto:hello@wininstallpro.com">hello@wininstallpro.com</a>.
+        Email: <a href="mailto:hello@wininstallpro.com">hello@wininstallpro.com</a>
       </p>
     </section>
   </main>
