--- a/index.html
+++ b/index.html
@@ -22,18 +22,16 @@
   <main>
     <section class="hero">
       <h1>WinInstall Pro Blog</h1>
-      <p class="subtitle">Simple, beautiful guides and tips for Windows users.</p>
+      <p class="subtitle">Minimal guides for Windows users.</p>
     </section>
     <section class="blog-list">
       <a href="posts/first-post.html" class="blog-card">
         <img src="assets/windows-usb.svg" alt="Windows USB" />
         <div>
-          <h2>How to Create a Windows 11 Bootable USB</h2>
+          <h2>Create a Windows 11 Bootable USB</h2>
           <p class="meta">April 2025 &bull; Guide</p>
-          <p>Step-by-step guide to making a bootable USB for Windows 11 using Rufus.</p>
         </div>
       </a>
-      <!-- Add more blog cards as you add posts -->
     </section>
   </main>
   <footer>
