--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WinInstall Pro Blog</title>
-  <link rel="stylesheet" href="styles/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Under Construction</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .icon {
+            font-size: 64px;
+            margin-bottom: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="logo">
-        <img src="assets/windows.svg" alt="Windows Logo" />
-        WinInstall Pro
-      </a>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="hero">
-      <h1>WinInstall Pro Blog</h1>
-      <p class="subtitle">Minimal guides for Windows users.</p>
-    </section>
-    <section class="blog-list">
-      <a href="posts/first-post.html" class="blog-card">
-        <img src="assets/windows-usb.svg" alt="Windows USB" />
-        <div>
-          <h2>Create a Windows 11 Bootable USB</h2>
-          <p class="meta">April 2025 &bull; Guide</p>
-        </div>
-      </a>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 WinInstall Pro</p>
-  </footer>
+    <div class="container">
+        <div class="icon">🚧</div>
+        <h1>Under Construction</h1>
+        <p>We're working hard to bring you something amazing.</p>
+        <p>Please check back soon!</p>
+    </div>
 </body>
 </html>
