--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact | WinInstall Pro</title>
-  <link rel="stylesheet" href="styles/main.css" />
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Contact | WinInstall Pro</title>
+	<link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
   <header>
